2012-01-21

 * added responses for different GET requests
 * added a default response for POST requests


 * added basic html response 

2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

* Initialized repository, created server.py and README.


2014-03-27 Omar Ali <o2themar6@live.com>

*For HW 9 I did project 12 and implemented AJAX image upload with JQuery.

Testing push.