@@ -97,6 +97,8 @@ def main():
     parser = argparse.ArgumentParser()
     parser.add_argument("-A", help="What application to run")
     parser.add_argument("-p", help="What port to use", type=int)
+    parser.add_argument('-M', '--Middleware', action='store_true', default='false', help="adding the "+ \
+            "-M flag will play communication between the server and components")
     args = parser.parse_args()
     
     global setup_complete
@@ -133,6 +135,14 @@ def main():
     else:
         print "App not found"
         return -1
+
+    print "This is args.Middleware: "
+    print args.Middleware
+    if args.Middleware == True:
+            print "Using Middleware Playback!\n"
+            from middleware_playback import MiddlewarePlayback
+            wsgi_app = MiddlewarePlayback(wsgi_app)
+
 
     socket_module = socket
     s = socket_module.socket()      # Create a socket object
